<resources>
    <string name="app_name">Real Estate Manager</string>
    <string name="facebook_application_id">1898055770358844</string>
    <string name="fb_login_protocol_scheme">fb1898055770358844</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDn2jw9WgTHuGyoJGdr_NdDGGJNhWQeH28</string>
    <string name="content_desc_img">Estate image</string>
    <string name="content_desc_img_no_estate_selected">Logo specifying that no estate has been
    selected yet</string>
    <string name="str_no_estate_selected">No estate selected</string>
    <string name="str_no_network">No network detected</string>
    <string name="str_connectivity_bar_btn_close">Close</string>
    <string name="str_dialog_add_agent_title">Add new agent</string>
    <string name="str_dialog_confirm">Confirm</string>
    <string name="str_dialog_logout_title">Logout</string>
    <string name="str_dialog_logout_message">Do you want to logout ?</string>
    <string name="str_error_logout">Error while logging out</string>
    <string name="str_toolbar_fragment_list_estate_title">Real Estate Manager</string>
    <string name="str_item_add_agent">Add agent</string>
    <string name="str_item_map">Map</string>
    <string name="str_item_search">Search</string>
    <string name="str_item_settings">Settings</string>
    <string name="str_item_logout">Logout</string>
    <string name="str_item_reset">Reset</string>
    <string name="str_item_edit">Edit</string>
    <string name="str_content_desc_map">Map indicating estate location</string>
    <string name="str_no_tag">-</string>
    <string name="str_places_nearby_title">Places nearby</string>
    <string name="str_item_filter">Filter</string>
    <string name="str_item_reset_filters">Reset filters</string>
    <string name="str_toolbar_fragment_new_estate_title">Create new estate</string>
    <string name="str_toolbar_fragment_modify_estate_title">Modify estate</string>
    <string name="str_new_estate_name_hint_text_input">Name</string>
    <string name="str_new_estate_agent_hint_text_input">Name agent</string>
    <string name="str_new_estate_price_hint_text_input">Price</string>
    <string name="str_new_estate_location_hint_text_input">Location</string>
    <string name="str_new_estate_description_hint_text_input">Description</string>
    <string name="str_new_estate_surface_hint_text_input">Surface</string>
    <string name="str_new_estate_rooms_hint_text_input">Rooms</string>
    <string name="str_new_estate_bathrooms_hint_text_input">Bathrooms</string>
    <string name="str_new_estate_bedrooms_hint_text_input">Bedrooms</string>
    <string name="str_slider_surface_title">Surface</string>
    <string name="str_slider_rooms_title">Rooms</string>
    <string name="str_slider_bathrooms_title">Bathrooms</string>
    <string name="str_slider_bedrooms_title">Bedrooms</string>
    <string name="str_slider_price_title">Price</string>
    <string name="str_slider_value_default_surface">200 sqm</string>
    <string name="str_slider_value_default_rooms">5</string>
    <string name="str_slider_value_default_bathrooms">1</string>
    <string name="str_slider_value_default_bedrooms">1</string>
    <string name="str_sqm_unit">%1$d sqm</string>
    <string name="str_sqm_unit_greater_than_or_equal">≥%1$d sqm</string>
    <string name="str_greater_than_or_equal">≥%1$d</string>
    <string name="str_new_estate_surface_section_area_unit">sqm</string>
    <string name="str_new_estate_surface_number_of_rooms_title">Number of rooms</string>
    <string name="str_new_estate_surface_rooms_hint">Rooms</string>
    <string name="str_new_estate_surface_bathrooms_hint">Bathrooms</string>
    <string name="str_new_estate_surface_bedrooms_hint">Bedrooms</string>
    <string name="str_new_estate_location_title">Location</string>
    <string name="str_new_estate_price_title">Price</string>
    <string name="str_new_estate_surface_section_price_dollar">$</string>
    <string name="str_new_estate_surface_section_price_euro">€</string>
    <string name="str_button_confirmation_creation">Confirm estate creation</string>
    <string name="str_button_confirmation_modification">Confirm modification</string>
    <string name="str_button_add_media">Add photo</string>
    <string name="str_button_add_places_nearby">Add places nearby</string>
    <string name="str_details_media_section_title">Photos</string>
    <string name="str_details_description_section_title">Description</string>
    <string name="str_details_status_section_title">Status</string>
    <string name="str_details_surface_sub_section_title">Surface</string>
    <string name="str_details_number_of_rooms_sub_section_title">Number of rooms</string>
    <string name="str_details_number_of_bedrooms_sub_section_title">Number of bedrooms</string>
    <string name="str_details_number_of_bathrooms_sub_section_title">Number of bathrooms</string>
    <string name="str_details_location_sub_section_title">Location</string>
    <string name="str_content_desc_number_of_bedrooms_icon">Icon number of bedrooms</string>
    <string name="str_content_desc_number_of_bathrooms_icon">Icon number of bathrooms</string>
    <string name="str_content_desc_number_of_rooms_icon">Icon number of rooms</string>
    <string name="str_content_desc_surface_icon">Icon Surface</string>
    <string name="str_dialog_reset_title">Reset estate</string>
    <string name="str_dialog_reset_message">All information will be erased. Confirm ?</string>
    <string name="str_dialog_cancel_creation_title">Cancel creation</string>
    <string name="str_dialog_cancel_modification_title">Cancel modifications</string>
    <string name="str_dialog_cancel_creation_message">All information will be lost. Confirm ?</string>
    <string name="str_dialog_cancel_modifications_message">All modifications will be lost. Confirm ?</string>
    <string name="str_dialog_button_yes">Yes</string>
    <string name="str_dialog_button_no">No</string>
    <string name="str_dialog_button_cancel">Cancel</string>
    <string name="str_dialog_button_close">Close</string>
    <string name="str_dialog_add_media_title">Import media</string>
    <string name="str_dialog_add_media_option_take_picture">Take picture</string>
    <string name="str_dialog_add_media_option_import_from_gallery">Import from gallery</string>
    <string name="str_dialog_name_media_title">Name photo</string>
    <string name="str_dialog_select_agent_title">Select agent</string>
    <string name="str_dialog_ad_poi_title">Add points of interest</string>
    <string name="str_toast_missing_information">Can\'t create Estate, missing information</string>
    <string name="str_toast_new_estate_created">New estate created</string>
    <string name="str_toast_estate_modified">Modifications saved</string>
    <string name="str_dialog_progress_bar_creation_text">Creating estate</string>
    <string name="str_dialog_progress_bar_update_text">Updating estate</string>
    <string name="str_dialog_confirm_sale_tile">Confirm sale</string>
    <string name="str_dialog_confirm_sale_message">This estate will be definitely marked as sold. Confirm ?</string>
    <string name="str_sold_status">Sold on</string>
    <string name="str_available_status">Available</string>
    <string name="str_sale_button_text">Sold</string>
    <string name="str_published_on">Published on </string>
    <string name="content_desc_logo_app">Logo application</string>
    <string name="str_authentication_btn_facebook">Connect with Facebook</string>
    <string name="str_authentication_btn_google">Connect with Google</string>
    <string name="str_authentication_btn_twitter">Connect with Twitter</string>
    <string name="str_sign_in_button">Sign in</string>
    <string name="snack_bar_auth_cancelled">Authentication cancelled</string>
    <string name="snack_bar_error_no_network">Authentication failed - no network</string>
    <string name="snack_bar_error_unknown">Authentication failed - Unknown error</string>
    <string name="str_dialog_new_media_hint_text_input">Name</string>
    <string name="str_dialog_permission_access_title">Permission Access</string>
    <string name="str_dialog_permission_access_message">Storage and camera accesses must be granted
        to allow application to work properly</string>
    <string name="str_dialog_permission_access_button_settings">Settings</string>
    <string name="uri_string_package">package:com.openclassrooms.realestatemanager</string>
    <string name="str_title_select_currency_dialog">Select currency</string>
    <string name="str_text_usd_dialog">United States Dollar</string>
    <string name="str_text_eur_dialog">Euro</string>
    <string name="str_symbol_usd_dialog">USD</string>
    <string name="str_symbol_eur_dialog">EUR</string>
    <string name="str_title_delete_account_dialog">Delete account</string>
    <string name="str_text_delete_account_dialog">Your account will be permanently deleted. Confirm ?</string>
    <string name="str_title_button_confirm">Confirm</string>
    <string name="str_title_currency">Currency</string>
    <string name="str_text_currency">Set your preferred local currency</string>
    <string name="str_text_symbol_currency">USD</string>
    <string name="str_title_delete_account">Delete Account</string>
    <string name="str_text_delete_account">Delete your Real Estate Manager account</string>
    <string name="str_sold_status_item">SOLD</string>
    <string name="str_no_real_estate">No real estate</string>
    <string name="notification_title">Real Estate Manager</string>
    <string name="notification_message_estate_available">New estate available</string>
    <string name="notification_message_estate_updated">Estate updated</string>
    <string name="str_dialog_loc_permission_access_title">Permission Access</string>
    <string name="str_dialog_loc_permission_access_message">Location access must be granted to allow
        application de work properly</string>
    <string name="str_dialog_enable_gps_title">Enable GPS</string>
    <string name="str_dialog_enable_gps_message">The GPS must be enable to access your position</string>
    <string name="str_dialog_enable_enable_button">Enable</string>
    <string name="str_toolbar_fragment_search_title">Search estates</string>
    <string name="str_dialog_search_title">Select filters</string>
    <string name="str_value_surface_slider">%1$d sqm</string>
    <string name="str_value_surface_slider_max">≥%1$d sqm</string>
    <string name="str_value_price_slider">$%1$d</string>
    <string name="str_value_price_slider_max">≥$%1$d</string>
    <string name="str_dialog_reset_filters_title">Reset filters</string>
    <string name="str_dialog_reset_filters_message">All the filters will be removed and set to default value. Confirm ?</string>
    <string name="toast_account_deleted">Account deleted</string>
    <string name="toast_error_delete_account">Error while operating</string>
    <string name="poi_bar">Bar</string>
    <string name="poi_cafe">Cafe</string>
    <string name="poi_library">Library</string>
    <string name="poi_market">Market</string>
    <string name="poi_museum">Museum</string>
    <string name="poi_park">Park</string>
    <string name="poi_restaurant">Restaurant</string>
    <string name="poi_school">School</string>
    <string name="str_dialog_first_name_agent">First name</string>
    <string name="str_dialog_last_name_agent">Last name</string>
    <string name="str_dialog_price_title">Price</string>
    <string name="str_dialog_price_min">$0</string>
    <string name="str_dialog_price_max">$2000000</string>
    <string name="str_dialog_surface_title">Surface</string>
    <string name="str_dialog_surface_min">0 sqm</string>
    <string name="str_dialog_surface_max">500 sqm</string>
    <string name="str_dialog_date_title">Date</string>
    <string name="str_dialog_date_min">From :</string>
    <string name="str_dialog_date_max">To :</string>
</resources>