<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_search_24dp_white"
        android:title="@string/str_item_search"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/settings"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_settings_24dp_dark_blue"
        android:title="@string/str_item_settings"
        app:showAsAction="collapseActionView"/>

    <item
        android:id="@+id/logout"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_logout_24dp_dark_blue"
        android:title="@string/str_item_logout"
        app:showAsAction="collapseActionView"/>
</menu>