<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/logo_real_estate_manager"
        android:layout_width="@dimen/logo_size"
        android:layout_height="@dimen/logo_size"
        android:src="@drawable/ic_baseline_business_50dp_white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/logo_margin_top"
        android:contentDescription="@string/content_desc_logo_app"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title_real_estate_manager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="@dimen/name_app_size"
        android:layout_marginTop="@dimen/name_app_margin_top"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo_real_estate_manager"
        app:layout_constraintRight_toRightOf="parent"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="1"
        android:rowCount="3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_real_estate_manager"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/facebook_auth_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/material_button_margin"
            android:layout_marginEnd="@dimen/material_button_margin"
            android:layout_marginTop="@dimen/material_button_margin_top"
            android:paddingTop="@dimen/material_button_padding"
            android:paddingBottom="@dimen/material_button_padding"
            android:textSize="@dimen/material_button_text_size"
            android:text="@string/str_authentication_btn_facebook"
            android:textAllCaps="false"
            android:theme="@style/MaterialButtonThemeFacebook"
            app:icon="@drawable/com_facebook_button_icon"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/google_auth_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/material_button_margin"
            android:layout_marginEnd="@dimen/material_button_margin"
            android:paddingTop="@dimen/material_button_padding"
            android:paddingBottom="@dimen/material_button_padding"
            android:textSize="@dimen/material_button_text_size"
            android:text="@string/str_authentication_btn_google"
            android:textAllCaps="false"
            android:theme="@style/MaterialButtonThemeGoogle"
            app:icon="@drawable/googleg_standard_color_18"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/twitter_auth_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/material_button_margin"
            android:layout_marginEnd="@dimen/material_button_margin"
            android:layout_marginBottom="@dimen/material_button_margin_bottom"
            android:paddingTop="@dimen/material_button_padding"
            android:paddingBottom="@dimen/material_button_padding"
            android:textSize="@dimen/material_button_text_size"
            android:text="@string/str_authentication_btn_twitter"
            android:textAllCaps="false"
            android:theme="@style/MaterialButtonThemeTwitter"
            app:icon="@drawable/fui_ic_twitter_bird_white_24dp"/>
    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>