<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="10dp"
    android:paddingBottom="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout_view_usd_currency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_item_click_behavior"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/usa_flag_icon"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/usa_flag"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:columnCount="1"
                android:rowCount="2"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                app:layout_constraintLeft_toRightOf="@id/usa_flag_icon"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/usa_currency_symbol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_symbol_usd_dialog"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginStart="10dp"
                    android:layout_row="0"
                    android:layout_column="0"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/usa_flag_icon"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/usa_currency_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_text_usd_dialog"
                    android:textSize="14sp"
                    android:layout_marginStart="10dp"
                    android:layout_row="1"
                    android:layout_column="0"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/usa_flag_icon"/>
            </GridLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout_view_euro_currency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_item_click_behavior"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constraint_layout_view_usd_currency"
        app:layout_constraintRight_toRightOf="parent">
        <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/euro_flag_icon"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/ue_flag"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:columnCount="1"
                android:rowCount="2"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                app:layout_constraintLeft_toRightOf="@id/euro_flag_icon"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/euro_currency_symbol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_symbol_eur_dialog"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginStart="10dp"
                    android:layout_row="0"
                    android:layout_column="0"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/usa_flag_icon"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/euro_currency_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_text_eur_dialog"
                    android:textSize="14sp"
                    android:layout_marginStart="10dp"
                    android:layout_row="1"
                    android:layout_column="0"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/usa_flag_icon"/>
            </GridLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>